--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drone Directory</title>
+
+  <script
+	src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1uFtiEOeXq5pzdiKT3QHzSFpe6L2v1lo&libraries=places"></script>
+
   </head>
   <body>
     <div id="app"></div>
