fix selecting location, shuffle display component

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Drone Directory</title>
 
   <script
-	src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1uFtiEOeXq5pzdiKT3QHzSFpe6L2v1lo&libraries=places"></script>
+	src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1uFtiEOeXq5pzdiKT3QHzSFpe6L2v1lo&libraries=places" async></script>
 
   </head>
   <body>
