--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Discover and share the best spots for drone photography in the British Isles.">
     <title>Drone Directory</title>
-
-  <script
-	src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1uFtiEOeXq5pzdiKT3QHzSFpe6L2v1lo&libraries=places" async></script>
-
   </head>
   <body>
     <div id="app"></div>
