--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1uFtiEOeXq5pzdiKT3QHzSFpe6L2v1lo&libraries=places" async></script>
   </body>
 </html>
